refactor lines and added servlets test