@@ -1,101 +1,111 @@
 package org.example.service;
 
-public class FilmServiceImplTest {
-/*
+import org.example.dao.repository.FilmDAO;
+import org.example.dao.repository.util.link.LinkActorWithFilm;
+import org.example.dao.repository.util.link.LinkDirectorWithFilm;
+import org.example.model.Director;
+import org.example.model.Film;
+import org.example.servlet.dto.FilmDTO;
+import org.example.servlet.mapper.FilmMapper;
+import org.example.servlet.mapper.Mapper;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
+
+import java.sql.SQLException;
+import java.util.Arrays;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
+class FilmServiceImplTest {
+
     private FilmDAO mockFilmDAO;
     private Mapper mockMapper;
     private LinkActorWithFilm mockLinkActorWithFilm;
+    private LinkDirectorWithFilm mockLinkDirectorWithFilm;
     private FilmServiceImpl filmService;
 
     @BeforeEach
     void setUp() {
         mockFilmDAO = mock(FilmDAO.class);
-        mockMapper = mock(FilmMapper.class);
+        mockMapper = mock(Mapper.class);
         mockLinkActorWithFilm = mock(LinkActorWithFilm.class);
-        filmService = new FilmServiceImpl(mockFilmDAO, mockMapper, mockLinkActorWithFilm);
+        mockLinkDirectorWithFilm = mock(LinkDirectorWithFilm.class);
+        filmService = new FilmServiceImpl(mockFilmDAO, mockMapper, mockLinkActorWithFilm, mockLinkDirectorWithFilm);
     }
 
     @Test
     void testCreateFilm() throws SQLException {
-        FilmDTO filmDTO = new FilmDTO(1, "Matrix",2007, List.of());
-        Film film = new Film(1, "Matrix",2007, List.of());
-
+        FilmDTO filmDTO = new FilmDTO(1, "Inception", 2010, List.of("Leonardo DiCaprio"), "Christopher Nolan");
+        Film film = new Film(1, "Inception", 2010, List.of(), new Director(1, "Christopher Nolan", List.of()));
         when(mockMapper.toEntity(filmDTO)).thenReturn(film);
-
         filmService.create(filmDTO);
-
         verify(mockFilmDAO).create(film);
     }
 
     @Test
     void testUpdateFilm() throws SQLException {
-        FilmDTO filmDTO = new FilmDTO(1, "Matrix",2007, List.of());
-        Film film = new Film(1, "Matrix",2007, List.of());
-
+        FilmDTO filmDTO = new FilmDTO(1, "Interstellar", 2014, List.of("Matthew McConaughey"), "Christopher Nolan");
+        Film film = new Film(1, "Interstellar", 2014, List.of(), new Director(1, "Christopher Nolan", List.of()));
         when(mockMapper.toEntity(filmDTO)).thenReturn(film);
-
         filmService.update(filmDTO);
-
         verify(mockFilmDAO).update(film);
     }
 
     @Test
     void testDeleteFilm() throws SQLException {
         int filmId = 1;
-
         filmService.delete(filmId);
-
         verify(mockFilmDAO).delete(filmId);
     }
 
     @Test
     void testGetById() throws SQLException {
-        Film film = new Film(1, "Matrix",2007, List.of());
-        when(filmService.getById(1)).thenReturn(film);
-
+        Film film = new Film(1, "Inception", 2010, List.of(), new Director(1, "Christopher Nolan", List.of()));
+        when(mockFilmDAO.getById(1)).thenReturn(film);
         Film result = filmService.getById(1);
-
         assertEquals(film, result);
         verify(mockFilmDAO).getById(1);
     }
 
     @Test
     void testGetAllFilms() throws SQLException {
-        Film film1 = new Film(1, "Matrix",2007, List.of());
-        Film film2 = new Film(1, "Matrix",2007, List.of());
-        when(filmService.getAll()).thenReturn(Arrays.asList(film1, film2));
-
+        Film film1 = new Film(1, "Inception", 2010, List.of(), new Director(1, "Christopher Nolan", List.of()));
+        Film film2 = new Film(2, "Interstellar", 2014, List.of(), new Director(1, "Christopher Nolan", List.of()));
+        when(mockFilmDAO.getAll()).thenReturn(Arrays.asList(film1, film2));
         List<Film> films = filmService.getAll();
-
         assertEquals(2, films.size());
         assertEquals(film1, films.get(0));
         assertEquals(film2, films.get(1));
         verify(mockFilmDAO).getAll();
     }
 
-
     @Test
     void testAddActorToFilm() throws SQLException {
         int actorId = 1;
         int filmId = 2;
-
         filmService.addActorToFilm(filmId, actorId);
-
         verify(mockLinkActorWithFilm).linkFilmWithActor(filmId, actorId);
     }
 
     @Test
-    void testInternalFields() {
-
-        FilmServiceImpl filmService1 = Mockito.spy(new FilmServiceImpl());
-
-        assertNotNull(filmService1.getDao(), "DAO should not be null");
-        assertNotNull(filmService1.getMapper(), "Mapper should not be null");
-
-        assertTrue(filmService1.getDao() instanceof FilmDAO, "DAO should be an instance of FilmDAO");
-        assertTrue(filmService1.getMapper() instanceof FilmMapper, "Mapper should be an instance of FilmMapper");
-
-        assertNotNull(filmService1.getActorWithFilm(), "LinkActorWithFilm should not be null");
+    void testAddDirectorToFilm() throws SQLException {
+        int directorId = 1;
+        int filmId = 2;
+        filmService.addDirectorToFilm(filmId, directorId);
+        verify(mockLinkDirectorWithFilm).linkFilmWithDirector(filmId, directorId);
     }
-*/
+
+    @Test
+    void testInternalFields() {
+        FilmServiceImpl filmService2 = Mockito.spy(new FilmServiceImpl());
+        assertNotNull(filmService2.getDao(), "DAO should not be null");
+        assertNotNull(filmService2.getMapper(), "Mapper should not be null");
+        assertTrue(filmService2.getDao() instanceof FilmDAO, "DAO should be an instance of FilmDAO");
+        assertTrue(filmService2.getMapper() instanceof FilmMapper, "Mapper should be an instance of FilmMapper");
+        assertNotNull(filmService2.getActorWithFilm(), "LinkActorWithFilm should not be null");
+        assertNotNull(filmService2.getDirectorWithFilm(), "LinkDirectorWithFilm should not be null");
+    }
 }
